// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Функциональность/Зависимости между виджетами Master / Detail 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        Функциональность
      </li>
      <li
        className="breadcrumb-item active"
      >
        Зависимости между виджетами
      </li>
      <li
        className="breadcrumb-item active"
      >
        Master / Detail
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "функциональность-зависимости-между-виджетами--master-detail",
                        "kind": "Функциональность/Зависимости между виджетами",
                        "name": "Master / Detail",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\core\\\\dependency.story.js",
                          "framework": "react",
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "Master / Detail",
                      }
                    }
                    excludedPropTypes={Array []}
                    info=""
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={Array []}
                    propTablesExclude={Array []}
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <Row
                      tag="div"
                    >
                      <Col
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <Row
                          tag="div"
                        >
                          <div
                            className="alert alert-secondary"
                          >
                            Значения в правой таблице фильтруются в зависимости от выбранного значения в левой таблице
                          </div>
                        </Row>
                        <Row
                          tag="div"
                        >
                          <Col
                            tag="div"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <Factory
                              actions={Object {}}
                              dataProvider={
                                Object {
                                  "pathMapping": Object {},
                                  "queryMapping": Object {},
                                  "url": "n2o/data/test",
                                }
                              }
                              filter={Object {}}
                              id="Page_First"
                              level="widgets"
                              paging={false}
                              src="TableWidget"
                              table={
                                Object {
                                  "autoFocus": false,
                                  "cells": Array [
                                    Object {
                                      "id": "name",
                                      "src": "TextCell",
                                    },
                                    Object {
                                      "icon": "fa fa-plus",
                                      "id": "surname",
                                      "src": "IconCell",
                                      "textPlace": "right",
                                      "type": "iconAndText",
                                    },
                                    Object {
                                      "id": "birthday",
                                      "src": "TextCell",
                                    },
                                  ],
                                  "className": "n2o",
                                  "colorFieldId": "",
                                  "fetchOnInit": true,
                                  "hasFocus": true,
                                  "hasSelect": true,
                                  "headers": Array [
                                    Object {
                                      "id": "name",
                                      "label": "Имя",
                                      "src": "TextTableHeader",
                                    },
                                    Object {
                                      "id": "surname",
                                      "label": "Фамилия",
                                      "src": "TextTableHeader",
                                    },
                                    Object {
                                      "id": "birthday",
                                      "label": "Дата рождения",
                                      "src": "TextTableHeader",
                                    },
                                  ],
                                  "size": 10,
                                  "sorting": Object {},
                                  "style": Object {},
                                }
                              }
                              toolbar={Object {}}
                            />
                          </Col>
                          <Col
                            tag="div"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <Factory
                              actions={Object {}}
                              dataProvider={
                                Object {
                                  "pathMapping": Object {},
                                  "queryMapping": Object {
                                    "filter.name": Object {
                                      "bindLink": "models.filter['Page_Second'].name",
                                    },
                                  },
                                  "url": "n2o/data/test",
                                }
                              }
                              dependency={
                                Object {
                                  "fetch": Array [
                                    Object {
                                      "bindLink": "models.resolve['Page_First']",
                                    },
                                  ],
                                }
                              }
                              filter={Object {}}
                              id="Page_Second"
                              level="widgets"
                              paging={false}
                              src="TableWidget"
                              table={
                                Object {
                                  "autoFocus": false,
                                  "cells": Array [
                                    Object {
                                      "id": "name",
                                      "src": "TextCell",
                                    },
                                    Object {
                                      "icon": "fa fa-plus",
                                      "id": "surname",
                                      "src": "IconCell",
                                      "textPlace": "right",
                                      "type": "iconAndText",
                                    },
                                    Object {
                                      "id": "birthday",
                                      "src": "TextCell",
                                    },
                                  ],
                                  "className": "n2o",
                                  "colorFieldId": "",
                                  "fetchOnInit": true,
                                  "filterDefaultValues": Object {
                                    "name": Object {
                                      "bindLink": "models.resolve['Page_First']",
                                      "value": "\`name\`",
                                    },
                                  },
                                  "hasFocus": true,
                                  "hasSelect": true,
                                  "headers": Array [
                                    Object {
                                      "id": "name",
                                      "label": "Имя",
                                      "src": "TextTableHeader",
                                    },
                                    Object {
                                      "id": "surname",
                                      "label": "Фамилия",
                                      "src": "TextTableHeader",
                                    },
                                    Object {
                                      "id": "birthday",
                                      "label": "Дата рождения",
                                      "src": "TextTableHeader",
                                    },
                                  ],
                                  "size": 10,
                                  "sorting": Object {},
                                  "style": Object {},
                                }
                              }
                              toolbar={Object {}}
                            />
                          </Col>
                        </Row>
                      </Col>
                    </Row>
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;

exports[`Storyshots Функциональность/Зависимости между виджетами Скрытие 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item active"
      >
        Функциональность
      </li>
      <li
        className="breadcrumb-item active"
      >
        Зависимости между виджетами
      </li>
      <li
        className="breadcrumb-item active"
      >
        Скрытие
      </li>
    </ol>
  </nav>
  <Card
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
      }
    }
    tag="div"
  >
    <CardBody
      style={
        Object {
          "flexBasis": "auto",
          "flexGrow": 1,
          "minWidth": "90%",
        }
      }
      tag="div"
    >
      <IntlProvider
        locale="ru"
        messages={Object {}}
      >
        <Provider
          store={
            Object {
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
              Symbol(observable): [Function],
            }
          }
        >
          <withContext(SecurityProvider)
            authProvider={[Function]}
            redirectPath="/login"
          >
            <FactoryProvider
              config={
                Object {
                  "actions": Object {
                    "dummyImpl": [Function],
                    "exportTable": [Function],
                    "link": [Function],
                    "perform": [Function],
                  },
                  "cells": Object {
                    "BadgeCell": [Function],
                    "ButtonsCell": [Function],
                    "CheckboxCell": [Function],
                    "CollapsedCell": [Function],
                    "EditableCell": [Function],
                    "IconCell": [Function],
                    "ImageCell": [Function],
                    "LinkCell": [Function],
                    "ProgressBarCell": [Function],
                    "TextCell": [Function],
                  },
                  "controls": Object {
                    "AutoComplete": [Function],
                    "ButtonUploader": [Function],
                    "Checkbox": [Function],
                    "CheckboxGroup": [Function],
                    "CodeEditor": [Function],
                    "DateInterval": [Function],
                    "DatePicker": [Function],
                    "DropZone": [Function],
                    "Html": [Function],
                    "InputHidden": [Function],
                    "InputMask": [Function],
                    "InputMoney": [Function],
                    "InputNumber": [Function],
                    "InputSelect": [Function],
                    "InputSelectTree": [Function],
                    "InputText": [Function],
                    "N2OSelect": [Function],
                    "OutputText": [Function],
                    "PasswordInput": [Function],
                    "Pills": [Function],
                    "RadioGroup": [Function],
                    "Rating": [Function],
                    "Select": [Function],
                    "Slider": [Function],
                    "Switch": [Function],
                    "TextArea": [Function],
                    "TextEditor": [Function],
                  },
                  "fields": Object {
                    "FilterButtonsField": [Function],
                    "RangeField": [Function],
                    "StandardField": [Function],
                    "TextField": [Function],
                  },
                  "fieldsets": Object {
                    "CollapseFieldset": [Function],
                    "LineFieldset": [Function],
                    "StandardFieldset": [Function],
                    "TitleFieldset": [Function],
                  },
                  "headers": Object {
                    "TextTableHeader": [Function],
                  },
                  "layouts": Object {
                    "LeftRightLayout": [Function],
                    "LeftTopBottomLayout": [Function],
                    "SingleLayout": [Function],
                    "TopBottomLayout": [Function],
                  },
                  "regions": Object {
                    "ListRegion": [Function],
                    "NoneRegion": [Function],
                    "PanelRegion": [Function],
                    "TabsRegion": [Function],
                  },
                  "snippets": Object {
                    "Alert": [Function],
                    "Collapse": [Function],
                    "Icon": [Function],
                    "Panel": [Function],
                    "Paragraph": [Function],
                    "PopoverConfirm": [Function],
                    "Spinner": [Function],
                    "Text": [Function],
                    "Title": [Function],
                    "Wireframe": [Function],
                  },
                  "widgets": Object {
                    "AdvancedTableWidget": [Function],
                    "ChartWidget": [Function],
                    "EditForm": [Function],
                    "FormWidget": [Function],
                    "HtmlWidget": [Function],
                    "ListWidget": [Function],
                    "TableWidget": [Function],
                    "TreeWidget": [Function],
                    "WireframeWidget": [Function],
                  },
                }
              }
              securityBlackList={Array []}
            >
              <Connect(ConnectedRouter)
                history={
                  Object {
                    "action": "POP",
                    "block": [Function],
                    "canGo": [Function],
                    "createHref": [Function],
                    "entries": Array [
                      Object {
                        "hash": "",
                        "key": "zybh0s",
                        "pathname": "/",
                        "search": "",
                        "state": undefined,
                      },
                    ],
                    "go": [Function],
                    "goBack": [Function],
                    "goForward": [Function],
                    "index": 0,
                    "length": 1,
                    "listen": [Function],
                    "location": Object {
                      "hash": "",
                      "key": "zybh0s",
                      "pathname": "/",
                      "search": "",
                      "state": undefined,
                    },
                    "push": [Function],
                    "replace": [Function],
                  }
                }
              >
                <div>
                  <Story
                    PropTable={[Function]}
                    components={
                      Object {
                        "a": [Function],
                        "code": [Function],
                        "h1": [Function],
                        "h2": [Function],
                        "h3": [Function],
                        "h4": [Function],
                        "h5": [Function],
                        "h6": [Function],
                        "li": [Function],
                        "p": [Function],
                        "ul": [Function],
                      }
                    }
                    context={
                      Object {
                        "hooks": HooksContext {
                          "currentContext": [Circular],
                          "currentDecoratorName": null,
                          "currentEffects": Array [],
                          "currentHooks": Array [],
                          "currentPhase": "NONE",
                          "hasUpdates": false,
                          "hookListsMap": WeakMap {},
                          "mountedDecorators": Set {
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                            [Function],
                          },
                          "nextHookIndex": 0,
                          "prevEffects": Array [],
                          "prevMountedDecorators": Set {},
                          "renderListener": [Function],
                        },
                        "id": "функциональность-зависимости-между-виджетами--скрытие",
                        "kind": "Функциональность/Зависимости между виджетами",
                        "name": "Скрытие",
                        "parameters": Object {
                          "fileName": "C:\\\\Users\\\\sliskov\\\\Projects\\\\n2o-new\\\\frontend\\\\n2o\\\\src\\\\core\\\\dependency.story.js",
                          "framework": "react",
                          "options": Object {
                            "hierarchyRootSeparator": "|",
                            "hierarchySeparator": /\\\\/\\|\\\\\\./,
                          },
                        },
                        "story": "Скрытие",
                      }
                    }
                    excludedPropTypes={Array []}
                    info=""
                    maxPropArrayLength={3}
                    maxPropObjectKeys={3}
                    maxPropStringLength={50}
                    maxPropsIntoLine={3}
                    propTableCompare={[Function]}
                    propTables={Array []}
                    propTablesExclude={Array []}
                    showHeader={true}
                    showInline={true}
                    showSource={false}
                    styles={[Function]}
                  >
                    <Row
                      tag="div"
                    >
                      <Col
                        tag="div"
                        widths={
                          Array [
                            "xs",
                            "sm",
                            "md",
                            "lg",
                            "xl",
                          ]
                        }
                      >
                        <Row
                          tag="div"
                        >
                          <div
                            className="alert alert-secondary"
                          >
                            Скроет правый виджет, если выбрать в левой таблице строку со значением пола "Мужской"
                          </div>
                        </Row>
                        <Row
                          tag="div"
                        >
                          <Col
                            tag="div"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <Factory
                              actions={Object {}}
                              dataProvider={
                                Object {
                                  "pathMapping": Object {},
                                  "queryMapping": Object {},
                                  "url": "n2o/data/test",
                                }
                              }
                              filter={Object {}}
                              id="Page_First"
                              level="widgets"
                              paging={false}
                              src="TableWidget"
                              table={
                                Object {
                                  "autoFocus": false,
                                  "cells": Array [
                                    Object {
                                      "id": "name",
                                      "src": "TextCell",
                                    },
                                    Object {
                                      "id": "surname",
                                      "src": "TextCell",
                                    },
                                    Object {
                                      "id": "gender.name",
                                      "src": "TextCell",
                                    },
                                  ],
                                  "className": "n2o",
                                  "colorFieldId": "",
                                  "fetchOnInit": true,
                                  "hasFocus": true,
                                  "hasSelect": true,
                                  "headers": Array [
                                    Object {
                                      "id": "name",
                                      "label": "Имя",
                                      "src": "TextTableHeader",
                                    },
                                    Object {
                                      "id": "surname",
                                      "label": "Фамилия",
                                      "src": "TextTableHeader",
                                    },
                                    Object {
                                      "id": "gender.name",
                                      "label": "Пол",
                                      "src": "TextTableHeader",
                                    },
                                  ],
                                  "size": 10,
                                  "sorting": Object {},
                                  "style": Object {},
                                }
                              }
                              toolbar={Object {}}
                            />
                          </Col>
                          <Col
                            tag="div"
                            widths={
                              Array [
                                "xs",
                                "sm",
                                "md",
                                "lg",
                                "xl",
                              ]
                            }
                          >
                            <Factory
                              actions={Object {}}
                              dataProvider={Object {}}
                              dependency={
                                Object {
                                  "visible": Array [
                                    Object {
                                      "bindLink": "models.resolve['Page_First']",
                                      "condition": "gender.id != 1",
                                    },
                                  ],
                                }
                              }
                              filter={Object {}}
                              html={
                                Object {
                                  "fetchOnInit": false,
                                  "html": "<div class='card bg-warning'><div class='card-body'>Скрыт от мужчин</div></div>",
                                  "url": null,
                                }
                              }
                              id="Page_Second"
                              level="widgets"
                              paging={false}
                              src="HtmlWidget"
                              toolbar={Object {}}
                            />
                          </Col>
                        </Row>
                      </Col>
                    </Row>
                  </Story>
                  <withContext(Connect(ModalPages)) />
                </div>
              </Connect(ConnectedRouter)>
            </FactoryProvider>
          </withContext(SecurityProvider)>
        </Provider>
      </IntlProvider>
    </CardBody>
  </Card>
</div>
`;
